cards layout issue fixed

--- a/src/pages/Landing/Landing.module.css
+++ b/src/pages/Landing/Landing.module.css
@@ -14,7 +14,7 @@
 
 /* landing features section styles */
 .landing_features_section {
-	padding: 2rem 1rem auto;
+	padding: 2rem auto auto;
 	margin: 4rem auto 1rem;
 }
 .landing_features_section .landing_features_section__heading1 {
@@ -22,17 +22,17 @@
 	margin-bottom: 2rem;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 600px) {
 	.landing_hero_section {
-		max-width: 720px;
+		max-width: 600px;
 		margin: 12rem auto;
 	}
 	.landing_features_section {
-		max-width: 720px;
+		max-width: 600px;
 		margin: 4rem auto;
 	}
 }
-@media (min-width: 992px) {
+@media (min-width: 960px) {
 	.landing_hero_section {
 		max-width: 960px;
 		margin: 12rem auto;
@@ -42,13 +42,13 @@
 		margin: 4rem auto;
 	}
 }
-@media (min-width: 1200px) {
+@media (min-width: 1280px) {
 	.landing_hero_section {
-		max-width: 1140px;
+		max-width: 1280px;
 		margin: 12rem auto;
 	}
 	.landing_features_section {
-		max-width: 1140px;
+		max-width: 1280px;
 		margin: 4rem auto;
 	}
 }
